--- a/src/app/content/sewy/morris.mdx
+++ b/src/app/content/sewy/morris.mdx
@@ -15,21 +15,21 @@ blurb: VVN TODO.
 stickers: [{image: "/loc/sewy/morris/poster.png", linkOut: "https://www.loc.gov/resource/yan.1a38589/", title: "Poster featuring Morris by The National Organization for Women"}, {image: "/loc/sewy/morris/southPass.jpg", title: "Photo of a Cabin in South Pass City", linkOut: "https://www.loc.gov/resource/highsm.38568/"}, {image: "/loc/sewy/morris/capitol.png", title: "Wyoming Capitol from Carol M. Highsmith Archive" , linkOut: "https://www.loc.gov/resource/highsm.16996/?r=0.342,1.112,0.256,0.176,0"}, {image: "/loc/sewy/morris/statue.png", title: "Statue of Esther Hobart Morris from Carol M. Highsmith Archive", linkOut: "https://www.loc.gov/resource/highsm.16996/?r=0.292,1.083,0.364,0.25,0"}]
 ---
 
-Esther Hobart Morris was a woman built to be a legend and so she became one. She stood at a striking six feet tall and 180 pounds and always wore the latest fashions because she knew people would always be watching her.
+Esther Hobart Morris was a woman built to be a legend. She stood at a striking six feet tall and 180 pounds and wore the latest fashions because she knew people would always be watching her.
 
-She was the first woman to hold public office in the United States as justice of the peace in South Pass City, Wyoming despite not having a law degree or any formal education. In her courtroom, she and her sons said it was “Justice first, then after that the law.”
+Despite not having a law degree or any formal education, she was the first woman to hold public office in the United States as Justice of the Peace in South Pass City, Wyoming. In her courtroom, she and her sons said it was “Justice first, then after that, the law.”
+South Pass City was the largest city along the Oregon Trail and by 1869, the year Morris arrived in the city, over 400,000 people had crossed Wyoming. Mark Twain wrote about his visit to the South Pass City stage station in his book “Roughing It”:
 
-South Pass City was the largest city along the Oregon Trail. By 1869, the year Morris arrived in South Pass City, over 400,000 people had crossed Wyoming. Mark Twain wrote about his visit to the stage station in his book “Roughing It”:
+<LOCItem type="book" image="/loc/sewy/morris/roughingIt.jpg" caption="Excerpt from Mark Twain’s book describing his visit to the South Pass City stage coach station" linkOut="https://www.loc.gov/resource/gdcmassbookdig.roughingit02twai/?sp=110&r=-0.065,0.611,1.133,0.78,0" alt="Scan of page in Mark Twain's book that describes his visit to the South Pass City stage coach station."/>
+<LOCItem type="pnp" image="/loc/sewy/morris/spc.jpg" caption="View of Main Street in South Pass City " linkOut="https://www.loc.gov/resource/hhh.wy0067.photos/?sp=5" alt="Color photo of Main Street, a wide dirt road with wooden building on either side, in South City Pass"/>
 
-<LOCItem type="book" image="/loc/sewy/morris/roughingIt.jpg" linkOut="https://www.loc.gov/resource/gdcmassbookdig.roughingit02twai/?sp=110&r=-0.065,0.611,1.133,0.78,0" />
-<LOCItem type="pnp" image="/loc/sewy/morris/spc.jpg" linkOut="https://www.loc.gov/resource/hhh.wy0067.photos/?sp=5"/>
+From day one, being the first female judge was not easy. Her predecessor, J. W. Stillman refused to turn his court dockets over to a woman.
 
-It wasn’t easy being the first female judge for Morris starting from day one. Her predecessor, J. W. Stillman, refused to turn his court dockets over to a woman.
 
 <ComicSection cols={9} rowHeight="2rem" elements={[
-    {type:"image", src: "/loc/sewy/morris/enteringCourtroom.png", position:{col:1, row:1}, size:{width:9, height:7}},
+    {type:"image", src: "/loc/sewy/morris/enteringCourtroom.png", alt:"A colorful comic panel of a woman and two men, Esther Morris and her two sons, bursting into a room. A man with a mustache, J.W. Stillman, looks at the doorway in surprise.",position:{col:1, row:1}, size:{width:9, height:7}},
     {type:"text", src:"This is my courtroom now.", position:{col:5, row:7}, size:{width:5, height:3}, style:{outline:"bubble", fontSize:"1.4rem", padding:"6px"}},
-    {type:"image", src: "/loc/sewy/morris/showdown.png", position:{col:2, row:10}, size:{width:7, height:16}},
+    {type:"image", src: "/loc/sewy/morris/showdown.png", alt:"A comic panel of J.W. Stillman looking suspiciously at one of the men.", position:{col:2, row:10}, size:{width:7, height:16}},
     {type:"text", src:"What? Are you the new justice of the peace?", position:{col:4, row:10}, size:{width:5, height:3}, style:{outline:"bubble", fontSize:".9rem", padding:"6px"}},
     {type:"text", src:"nono, not me", position:{col:3, row:16}, size:{width:3, height:3}, style:{outline:"none", fontSize:".9rem", padding:"6px"}},
     {type:"text", src:"we're just the sons", position:{col:6, row:22}, size:{width:3, height:3}, style:{outline:"none", fontSize:".9rem", padding:"6px"}},
@@ -37,11 +37,11 @@ It wasn’t easy being the first female judge for Morris starting from day one. 
 
 <ComicSection cols={9} rowHeight="2rem" elements={[
     {type:"text", src:"I'm the new justice of the peace.", position:{col:1, row:1}, size:{width:6, height:2}, style:{outline:"bubble", fontSize:"1rem", padding:"6px"}},
-    {type:"image", src: "/loc/sewy/morris/faceToFace.png", position:{col:1, row:1}, size:{width:9, height:7}},
+    {type:"image", src: "/loc/sewy/morris/faceToFace.png", alt:"A comic panel of J.W. Stillman looking skeptically at Esther Morris", position:{col:1, row:1}, size:{width:9, height:7}},
     {type:"text", src:"I need the dockets.", position:{col:3, row:7}, size:{width:5, height:2}, style:{outline:"bubble", fontSize:"1rem", padding:"6px"}},
     {type:"text", src:"I won't do it!", position:{col:5, row:10}, size:{width:2, height:2}, style:{outline:"bubble", fontSize:"1.2rem"}},
     {type:"image", src: "/loc/sewy/morris/writeWarrant.png", position:{col:1, row:10}, size:{width:9, height:13}},
-    {type:"text", src:"Yeah that's going to be a warrant then.", position:{col:5, row:21}, size:{width:4, height:2}, style:{outline:"bubble", fontSize:"1rem"}},
+    {type:"text", src:"Yeah that's going to be a warrant then.", alt:"A comic panel of Esther scribbling into notepad.", position:{col:5, row:21}, size:{width:4, height:2}, style:{outline:"bubble", fontSize:"1rem"}},
 ]}/>
 
 In his first court appearance, Stillman’s attorney argued that the warrant was improperly issued.
@@ -49,25 +49,26 @@ In his first court appearance, Stillman’s attorney argued that the warrant was
 <ComicSection cols={9} rowHeight="2rem" elements={[
     {type:"text", src:"This warrant will never hold up in court!", position:{col:1, row:1}, size:{width:5, height:2}, style:{outline:"bubble", fontSize:".8rem", padding:"6px"}},
     {type:"text", src:"hmmm. You might be right.", position:{col:3, row:4}, size:{width:4, height:2}, style:{outline:"bubble", fontSize:".8rem", padding:"6px"}},
-    {type:"image", src: "/loc/sewy/morris/morrisLooking.png", position:{col:2, row:1}, size:{width:8, height:7}},
+    {type:"image", src: "/loc/sewy/morris/morrisLooking.png", alt:"A comic panel of Esther looking pensive.", position:{col:2, row:1}, size:{width:8, height:7}},
     {type:"text", src:"Case dismissed.", position:{col:4, row:6}, size:{width:4, height:2}, style:{outline:"bubble", fontSize:"1rem", padding:"6px"}},
 ]}/>
 
 <ComicSection cols={9} rowHeight="1rem" elements={[
-    {type:"image", src: "/loc/sewy/morris/celebrating.png", position:{col:1, row:1}, size:{width:9, height:17}},
+    {type:"image", src: "/loc/sewy/morris/celebrating.png", alt:"A comic of two figures joyfully running out of a building in the background, and Esther scribbling into a notepad in the foreground.",position:{col:1, row:1}, size:{width:9, height:17}},
     {type:"text", src:"wahooooo", position:{col:2, row:8}, size:{width:1, height:2}, style:{fontSize:".7rem",transform:"rotate(-4deg)", padding:"6px", backgroundColor:"#ffffff8a", outline:"none"}},
     {type:"text", src:"we did it!!!", position:{col:4, row:10}, size:{width:2, height:2}, style:{fontSize:".7rem",transform:"rotate(8deg)", padding:"6px", backgroundColor:"#ffffff8a", outline:"none"}},
     {type:"text", src:"I'll just write a new one.", position:{col:5, row:18}, size:{width:4, height:4}, style:{outline:"bubble", fontSize:"1rem", padding:"6px"}},
     ]}/>
 
 
-In his second court appearance, Stillman argued that it wouldn’t be a fair trial with her presiding 
+In his second court appearance, Stillman argued that it wouldn’t be a fair trial since Morris would be the one presiding over the case. 
+
 <ComicSection cols={9} rowHeight="2 rem" elements={[
     {type:"text", src:"This is a stacked court! How could I ever receive a fair trial?", position:{col:1, row:1}, size:{width:4, height:2}, style:{outline:"bubble", fontSize:".8rem", padding:"6px"}},
-    {type:"image", src: "/loc/sewy/morris/withSons.png", position:{col:1, row:1}, size:{width:9, height:7}},
+    {type:"image", src: "/loc/sewy/morris/withSons.png", alt:"A comic panel of Esther looking determined and flanked by one of her sons on each side.", position:{col:1, row:1}, size:{width:9, height:7}},
     {type:"text", src:"With you as a judge and your two sons as your cronies.", position:{col:5, row:1}, size:{width:4, height:2}, style:{outline:"bubble", fontSize:".8rem", padding:"6px"}},
     {type:"text", src:"And I'll NEVER let a woman preside over this court! You'll never get my dockets.", position:{col:1, row:7}, size:{width:5, height:2}, style:{outline:"bubble", fontSize:".8rem", padding:"6px"}},
-    {type:"image", src: "/loc/sewy/morris/buyNew.png", position:{col:4, row:9}, size:{width:6, height:7}},
+    {type:"image", src: "/loc/sewy/morris/buyNew.png", alt:"A comic panel of Esther holding a dollar bill.", position:{col:4, row:9}, size:{width:6, height:7}},
     {type:"text", src:"Alright. Archy, go buy me a new docket.", position:{col:3, row:15}, size:{width:5, height:2}, style:{outline:"bubble", fontSize:".8rem", padding:"6px"}},
 ]}/>
 
@@ -76,4 +77,4 @@ Even though she lost her first court case, she won in the court of public opinio
 
 Less than a year after her initial appointment, Morris’s term came to an end, and she left South Pass City. She followed her son to Laramie, and eventually settled in Cheyenne. Two nine-feet tall statues exist to celebrate her legacy -- one stands in the State Capitol in Cheyenne, and other stands in the US Capitol in Washington DC.
 
-<LOCItem type="pnp" image="/loc/sewy/morris/statue.jpg" caption="The National Statuary Hall in Washington DC hosts two statues to represent each state in the US Capitol. Esther is one that stands for Wyoming." linkOut="https://www.loc.gov/resource/pcrd.1a02480/"/>
+<LOCItem type="pnp" image="/loc/sewy/morris/statue.jpg" caption="The National Statuary Hall in Washington DC hosts two statues to represent each state in the US Capitol. Morris is one that stands for Wyoming." linkOut="https://www.loc.gov/resource/pcrd.1a02480/" alt="A colorized postcard of the National Statuary Hall in Washington DC. The hall has very tall ceilings and multiple windows letting in natural light. There are white marble statues of historical figures throughout the hall."/>
