--- a/src/app/content/sewy/lionsPark.mdx
+++ b/src/app/content/sewy/lionsPark.mdx
@@ -15,54 +15,54 @@ blurb: VVN TODO
 stickers: [{image: "/loc/sewy/lionsPark/trees.jpg", linkOut: "https://www.loc.gov/resource/cph.3b48715/", title: "Poster encouraging planting trees as a method of soil conservation."}, {image: "/loc/sewy/lionsPark/looking.png", linkOut: "https://www.loc.gov/resource/gdcmassbookdig.arbordaybirddayo00penn/?sp=3&r=-0.1,0.295,1.097,0.755,0", title: "Cover from Pennsylvania book on Arbor Day"}, {image: "/loc/sewy/lionsPark/cottonwood.jpg", linkOut: "https://www.loc.gov/resource/stereo.1s00702/", title: "Stereograph of cottonwood tree"}, {image: "/loc/sewy/lionsPark/jenkins5.png"}]
 ---
 
-James Jenkins arrive in Baraboo, Wisconsin against his will -- his parents both immigrated there from Liverpool, England in early 1852, along with his grandparents and four other siblings. He was born in October that year, and was the youngest of the family.
+James Jenkins arrived in Baraboo, Wisconsin against his will -- his parents both immigrated there from Liverpool, England in early 1852, along with his grandparents and four other siblings. He was born in October that year, and was the youngest of the family.
 
-His eldest brother, John Jenkins, was a lawyer who later served as the state representative. In 1876, he was appointted to be a US States Attorney for the territory of Wyoming. He convinced his brother, James, to move to Wyoming with him, and that is how they ended up in Cheyenne.
+His eldest brother, John Jenkins, was a lawyer who later served as the state representative. In 1876, he was appointed to be a US States Attorney for the territory of Wyoming. He convinced his brother, James, to move to Wyoming with him, and that is how they ended up in Cheyenne.
 
-On his first day in Cheyenne, the brothers had dinner at Fort David Russell, as the elder John had to defend two of the officers in court. John eventually moved back to Wisconsin after his appointed ended, but James enjoyed Wyoming, and sent for his wife to move to the new state with him.
+On his first day in Cheyenne, the brothers had dinner at Fort David Russell, as the elder John had to defend two of the officers in court. John eventually moved back to Wisconsin after his appointment ended, but James enjoyed Wyoming, and sent for his wife to move to the new state with him.
 
-<LOCItem image="/loc/sewy/lionsPark/fortDavid.jpg" type="pnp" linkOut="https://www.loc.gov/resource/hhh.wy0259.sheet"/>
-<LOCItem image="/loc/sewy/lionsPark/officersQuarters.jpg" type="pnp" linkOut="https://www.loc.gov/resource/hhh.wy0259.photos/?sp=1"/>
+<LOCItem image="/loc/sewy/lionsPark/fortDavid.jpg" type="pnp" caption="Survey drawing of Fort David A. Russell" linkOut="https://www.loc.gov/resource/hhh.wy0259.sheet" alt="A black and white site plan of Fort David A. Russell. The site plan has a building key and a brief history of the fort."/>
+<LOCItem image="/loc/sewy/lionsPark/officersQuarters.jpg" type="pnp" caption="Officers quarters at Fort David A. Russell" linkOut="https://www.loc.gov/resource/hhh.wy0259.photos/?sp=1" alt="A black and white photograph of the officers quarters at the fort. The image shows multiple large, multi-storied homes lining a road. Trees with empty branches line the street."/>
 
-James settled in Cheyenne. In 1878, when Jenkins planted his first tree in Cheyenne, it was a treeless prairie town. He took it upon himself to make Cheyenne a City of Trees.
+James settled in Cheyenne, and in 1878, he planted his first tree when the city was a treeless prairie town. He took it upon himself to make Cheyenne a City of Trees.
 
 <ComicSection cols={9} elements={[
-    {type:"image", src:"/loc/sewy/lionsPark/jenkins1.png", position:{col:2, row:1}, size:{width:7, height:3}},
+    {type:"image", src:"/loc/sewy/lionsPark/jenkins1.png", alt:"A comic panel of a James Jenkins in a suit peering into the distance with one hand shading his eyes. There’s a figure with a confused expression standing behind him.", position:{col:2, row:1}, size:{width:7, height:3}},
     {type:"type", src:"Beautiful city of trees we've got here", style:{outline:"bubble"}, position:{col:2, row:1}, size:{width:3, height:1}},
-    {type:"image", src:"/loc/sewy/lionsPark/jenkins2.png", position:{col:2, row:4}, size:{width:7, height:3}},
-    {type:"image", src:"/loc/sewy/lionsPark/jenkins3.png", position:{col:2, row:7}, size:{width:7, height:3}},
+    {type:"image", src:"/loc/sewy/lionsPark/jenkins2.png", alt:"A comic panel of a bird’s eye view of a vast landscape with a couple of buildings and no trees.", position:{col:2, row:4}, size:{width:7, height:3}},
+    {type:"image", src:"/loc/sewy/lionsPark/jenkins3.png", alt:"A comic panel of James mid-sentence with a confused looking figure.", position:{col:2, row:7}, size:{width:7, height:3}},
     {type:"type", src:"... dude there's no trees" ,  style:{outline:"bubble"},position:{col:5, row:6}, size:{width:3, height:1}},
     {type:"type", src:"Not *yet*",  style:{outline:"bubble"},position:{col:2, row:9}, size:{width:3, height:1}},
 
 ]}/>  
 
-Arbor Day was a new holiday established in Nebraska in 1874, aiming to get a growth of new trees planted to help beautify and conserve the area. The movement caught on in Wyoming, where the reasons to plant trees were compelling:
+Arbor Day was a new holiday established in Nebraska in 1874,, with the aim of getting new trees planted to help beautify and conserve the area. The movement caught on in Wyoming, where the reasons to plant trees were compelling:
 
 <ComicSection cols={7} elements={[
     {type: "text", src:"Trees help create shelter from wind", position:{col: 1, row:1}, size:{width: 3, height:1}, style:{outline:"box", backgroundColor: "white"}},
-    {type:"image", src:"/loc/sewy/lionsPark/tree1.png", position:{col: 2, row: 1}, size:{width:5, height:3}},
-    {type: "text", src:"They help prevent flooding by soaking up rainwater into the soil instead of letting it run off", position:{col: 1, row:4}, size:{width: 3, height:1}, style:{outline:"box", backgroundColor: "white"}},
-    {type:"image", src:"/loc/sewy/lionsPark/tree2.png", position:{col: 2, row: 4}, size:{width:5, height:3}},
-    {type: "text", src:"And create a beautiful place for the next generation.", position:{col: 1, row:7}, size:{width: 3, height:1}, style:{outline:"box", backgroundColor: "white"}},
-    {type:"image", src:"/loc/sewy/lionsPark/tree3.png", position:{col: 2, row: 7}, size:{width:5, height:3}},
+    {type:"image", src:"/loc/sewy/lionsPark/tree1.png", alt:"A comic panel of a lush tree with a determined look on its trunk. An animal, could be a cow or horse, seeks shelter from the wind under its branches.", position:{col: 2, row: 1}, size:{width:5, height:3}},
+    {type: "text", src:"They help prevent flooding by soaking up rainwater instead of letting it run off", position:{col: 1, row:4}, size:{width: 3, height:1}, style:{outline:"box", backgroundColor: "white"}},
+    {type:"image", src:"/loc/sewy/lionsPark/tree2.png", alt:"A comic panel of a cross section of the ground. Above ground there is a tree surrounded by rainwater. The tree has a big smile across its trunk. Below ground the tree’s roots are drinking in the water and one of the tree’s roots holds a drinking glass that is steadily filled by the rainwater trickling through the ground.", position:{col: 2, row: 4}, size:{width:5, height:3}},
+    {type: "text", src:"And they create a beautiful place for the next generation.", position:{col: 1, row:7}, size:{width: 3, height:1}, style:{outline:"box", backgroundColor: "white"}},
+    {type:"image", src:"/loc/sewy/lionsPark/tree3.png", alt:"A comic panel of a street lined with tall, lush and green trees.", position:{col: 2, row: 7}, size:{width:5, height:3}},
     {type: "text", src:"Arbor Day was made into a holiday in 1888.", position:{col: 4, row:9}, size:{width: 3, height:1}, style:{outline:"box", backgroundColor: "white"}},
 ]}/>
 
-The first Arbor Day started off with a grand parade as a tree, loaded onto a wagon with a flag tied to its top, was planted in the first park in the city at 22nd St and Central Avenue. This first park, at the time fresh and new, is now known as the Old City Park, whose site now hosts the Wyoming State Supreme Court and the Wyoming State Museum.
+The first Arbor Day started off with a grand parade. A tree was loaded onto a wagon with a flag tied to its top, and it was planted in the city’s first park at 22nd St and Central Avenue. This first park, at the time fresh and new, is now known as the Old City Park, and it’s now home to the Wyoming State Supreme Court and the Wyoming State Museum.
+<LOCItem type="book" caption="Images of the first city park in Cheyenne." image="/loc/sewy/lionsPark/cityPark.jpg" linkOut="https://www.loc.gov/resource/gdcmassbookdig.photographsofche00kirk/?sp=15&st=image&r=-0.131,-0.029,1.244,0.872,0" alt="A page from a book showing multiple sepia images of a public park in Cheyenne. The images show lush park grounds filled with foliage."/>
+<LOCItem type="newspaper" caption="Article in the Cheyenne Daily Leader describing the city’s plan to plant 250 trees in the public park" image="/loc/sewy/lionsPark/arborDay.png" linkOut="https://www.loc.gov/resource/sn84022149/1882-04-28/ed-1/?sp=4&r=0.138,0.067,0.364,0.25,0" alt="A black and white scan of a newspaper article. The article has the title Arbor Day and details the city’s plans to plant 250 trees in a public park."/>
 
-<LOCItem type="book" caption="Images of the first city park in Cheyenne. VVN TODO MORE ABOUT THIS" image="/loc/sewy/lionsPark/cityPark.jpg" linkOut="https://www.loc.gov/resource/gdcmassbookdig.photographsofche00kirk/?sp=15&st=image&r=-0.131,-0.029,1.244,0.872,0"/>
-<LOCItem type="newspaper" caption="VVNTODO Description of article" image="/loc/sewy/lionsPark/arborDay.png" linkOut="https://www.loc.gov/resource/sn84022149/1882-04-28/ed-1/?sp=4&r=0.138,0.067,0.364,0.25,0"/>
+Arbor Day was nearly repealed in 1920, and James, upset at the thought that the beautiful land around Sloan's Lake wouldn't reach its full potential, wrote a letter to the Chamber of Commerce. They found his vision compelling and appointed him a "committee of one" to plant trees around the city.
 
-Arbor Day was nearly repealed in 1920, and Jenkins was upset at the thought that the beautiful land around Sloan's Lake wouldn't reach its full potential. He wrote a letter to the Chamber of Commerce, who found his vision compelling and appointed him a "committee of one" to plant trees around the city.
 
 <ComicSection cols={5} elements={[
-    {type:"image", src:"/loc/sewy/lionsPark/jenkins4.png", position:{col: 2, row: 1}, size:{width:2, height:3}},
+    {type:"image", src:"/loc/sewy/lionsPark/jenkins4.png", alt:"A comic panel of James receiving a tree sapling and a shovel.", position:{col: 2, row: 1}, size:{width:2, height:3}},
     {type: "text", src:"I like your spunk. Go for it!", position:{col:1, row:2}, size:{width:1, height:1}, style:{outline:"bubble"}},
-    {type:"image", src:"/loc/sewy/lionsPark/jenkins5.png", position:{col: 4, row: 5}, size:{width:2, height:4}},
+    {type:"image", src:"/loc/sewy/lionsPark/jenkins5.png", alt:"A comic panel of James running off the screen holding the shovel and tree sapling.", position:{col: 4, row: 5}, size:{width:2, height:4}},
     {type: "text", src:"Okay!", position:{col:2, row:6}, size:{width:1, height:1}, style:{outline:"bubble"}},
 ]}/>
 
-Sloan’s Lake grove was overgrown, with clover over 5 feet tall. But Jenkins painted a picture for the Lion’s Club, who was tasked with beautifying the area. He said “Gentlemen, if these grounds were cleaned up, this is the ideal spot for picnics and pleasure.” This motivated one of the members so much he shouted out with pride, “LIONS PARK!”, and that’s how it got its name.
+Sloan’s Lake grove was overgrown, with clover over 5 feet tall. But James painted a picture for the Lion’s Club, who was tasked with beautifying the area. He said “Gentlemen, if these grounds were cleaned up, this is the ideal spot for picnics and pleasure.” This motivated one of the members so much he shouted out with pride, “LIONS PARK!”, and that’s how it got its name.
 
 {/* 
 Sticker template: 
