--- a/src/app/content/chicago/garfieldPark.mdx
+++ b/src/app/content/chicago/garfieldPark.mdx
@@ -15,49 +15,49 @@ blurb:
 stickers: [{image: "/loc/chicago/garfieldPark/map.png", linkOut: "https://www.loc.gov/resource/g4104cm.g01790189611/?sp=2&r=0.058,1.049,0.725,0.499,0"},{image: "/loc/chicago/garfieldPark/plants.jpg", linkOut: "https://www.loc.gov/resource/highsm.18037/?r=-0.51,-0.095,2.019,1.416,0"}, {image: "/loc/chicago/garfieldPark/floralGardens.png", linkOut: "https://www.loc.gov/resource/stereo.1s12454/"}, {image: "/loc/chicago/garfieldPark/dome.png", caption: "Garfield Park Golden Dome Fieldhouse. Photographs in the Carol M. Highsmith Archive, Library of Congress, Prints and Photographs Division", linkOut: "https://www.loc.gov/resource/highsm.18122/"}]
 ---
 
-When it first opened in 1874, Garfield Park was originally known as Chicago’s Central Park. Planned to be the crown jewel of Chicago’s West Side parks system, it was inspired by the gardens of French parks. However, over the remainder of the century, it deteriorated with neglect, and by the turn of the century, much of its lawns had become overgrown and unusable.
+When it first opened in 1874, Garfield Park was originally known as Chicago’s Central Park. Planned as the crown jewel of Chicago’s West Side parks system, it was inspired by the gardens in French parks. However, over the remainder of the century, it deteriorated due to neglect, and by the turn of the century, much of its lawns had become overgrown and unusable.
 
 In 1905, the new West Park System superintendent, Jens Jensen, started to redesign and reenvision the park. At this point, the park had quadrupled in size -- from 40 acres to over 180. A part of this overhaul was to rethink the conservatories in the various parks in his jurisdiction -- in an effort to consolidate three typical plant conservatories into a monumental one, he demolished the existing buildings in Garfield,  Humboldt, and Douglass Park and built a new one in Garfield. 
 
-<LOCItem type="pnp" image="/loc/chicago/garfieldPark/conservatory.jpg" linkOut="https://www.loc.gov/resource/stereo.1s12470/"/>
+<LOCItem type="pnp" image="/loc/chicago/garfieldPark/conservatory.jpg" caption="View of the conservatory in Humboldt Park" linkOut="https://www.loc.gov/resource/stereo.1s12470/" alt="Stereograph of a large multi-storied conservatory surrounded by manicured lawns and gardens."/>
 
 Known as one of the largest conservatories in the entire country, Garfield’s new conservatory had many plants from the three smaller conservatories it had absorbed. The building itself was magnificent -- the large silhouette cast by the Palm Room was designed to evoke a haystack. Each room of the conservatory is capped by a different type of roof -- the Fern Room sitting behind the Palm has a gable roof.
 
-<LOCItem type="book" image="/loc/chicago/garfieldPark/greenhouse.png" linkOut="https://www.loc.gov/resource/gdcmassbookdig.onehundredtwenty01rand/?sp=126&q=garfield+park&r=0,-0.029,1,0.743,0"/>
+<LOCItem type="book" image="/loc/chicago/garfieldPark/greenhouse.png" caption="Greenhouse in Garfield Park" linkOut="https://www.loc.gov/resource/gdcmassbookdig.onehundredtwenty01rand/?sp=126&q=garfield+park&r=0,-0.029,1,0.743,0" alt="Scan of black and white photograph of large greenhouse in Garfield Park surrounded by landscaped lawns."/>
 Most importantly in the conservatory are the plants. Jensen’s plan for the landscape design diverged from typical conservatories at the time -- instead of plants sitting in individual pots, he wanted each room to feel like a natural, beautiful scene.
 
 <ComicSection cols={9} rowHeight="2rem" elements={[
     {type:"text", src:"As the largest room in the conservatory, the Palm Room hosts plants from warm habitats around the world. But one specific palm has a long history with the conservatory:", position:{col:1, row:1}, size:{width:9, height:2}, style:{outline:"box", backgroundColor: "white", fontSize: "1rem"}},
     {type:"text", src:"The double coconut palm!", position:{col:2, row:5}, size:{width:7, height:2}, style:{outline:"none", fontSize:"1.9rem", backgroundColor:"yellow"}},
-    {type:"image", src:"/loc/chicago/garfieldPark/seed1.png", position:{col:1, row:3}, size:{width:9, height:13}},
-    {type:"text", src:"The double coconut palm's coconut is the largest seed of all plants. Growing natively to the island-country of Seychelles (off the coast of Africa), the footprint of where it could grow naturally is small. With habitat loss, the plant has become endangered. In the 1950s, one of its seeds found its way to Chicago through Garfield Park Conservatory horticulturist Robert Van Tress.", position:{col:1, row:14}, size:{width:9, height:2}, style:{outline:"box", backgroundColor: "white"}},
-    {type:"image", src:"/loc/chicago/garfieldPark/seed2.png", position:{col:1, row:15}, size:{width:9, height:10}},
+    {type:"image", src:"/loc/chicago/garfieldPark/seed1.png", alt:"An illustration of the conservatory with a large double coconut palm growing out of the roof.", position:{col:1, row:3}, size:{width:9, height:13}},
+    {type:"text", src:"The double coconut palm's coconut is the largest seed of all plants. Native to the island-country of Seychelles (off the coast of Africa), the footprint of where it can naturally grow is small. With habitat loss, the plant has become endangered. In the 1950s, one of its seeds found its way to Chicago through Garfield Park Conservatory horticulturist Robert Van Tress.", position:{col:1, row:14}, size:{width:9, height:2}, style:{outline:"box", backgroundColor: "white"}},
+    {type:"image", src:"/loc/chicago/garfieldPark/seed2.png", alt:"Color illustration of the coconut from the double coconut palm.", position:{col:1, row:15}, size:{width:9, height:10}},
     {type:"text", src:"In the 1960s, while vacationing, Van Tress came across one of the rare seeds and brought it back to add to the Palm Room.", position:{col:1, row:24}, size:{width:9, height:3}, style:{outline:"box", backgroundColor: "white"}},
-    {type:"image", src:"/loc/chicago/garfieldPark/seed3.png", position:{col:1, row:25}, size:{width:9, height:10}},
+    {type:"image", src:"/loc/chicago/garfieldPark/seed3.png", alt:"A color comic of Van Tress holding a double coconut palm seed at the check-in counter of an airline. The man behind the counter looks at him confused.", position:{col:1, row:25}, size:{width:9, height:10}},
     {type:"text", src:"I'm a hoticulturist. This is my hobby.", position:{col:1, row:36}, size:{width:4, height:2}, style:{outline:"bubble"}},
-    {type:"image", src:"/loc/chicago/garfieldPark/seed4.png", position:{col:1, row:36}, size:{width:9, height:10}},
+    {type:"image", src:"/loc/chicago/garfieldPark/seed4.png", alt:"A comic illustration of Van Tress still holiding the seed and looking down.", position:{col:1, row:36}, size:{width:9, height:10}},
     {type:"text", src:"But it didn't take well to the Chicago environment, and died.", position:{col:5, row:45}, size:{width:5, height:2}, style:{outline:"box", backgroundColor: "white"}},
-    {type:"image", src:"/loc/chicago/garfieldPark/seed5.png", position:{col:1, row:46}, size:{width:9, height:7}},
+    {type:"image", src:"/loc/chicago/garfieldPark/seed5.png", alt:"A black and white comic illustration of a grave with RIP SEED #1 written on the tombstone.", position:{col:1, row:46}, size:{width:9, height:7}},
     {type:"text", src:"Only a few years later, the conservatory acquired another seed, and this one started to sprout.", position:{col:1, row:53}, size:{width:4, height:2}, style:{outline:"box", backgroundColor: "white"}},
-    {type:"image", src:"/loc/chicago/garfieldPark/seed6.png", position:{col:1, row:53}, size:{width:9, height:16}},
+    {type:"image", src:"/loc/chicago/garfieldPark/seed6.png", alt:"A color illustration a double coconut palm and a seed. Van Tress is looking at the seed excitedly.", position:{col:1, row:53}, size:{width:9, height:16}},
     {type:"text", src:"It was the star of the Palm Room for 40 years, and grew leaves that were 20 feet by 10 feet. In 2003, when the conservatory renovated the palm house, they had to transplant the tree. When they dug it up, the measured some of its roots to be 15 feet long.", position:{col:4, row:68}, size:{width:6, height:3}, style:{outline:"box", backgroundColor: "white"}},
 ]}/>
 
 <ComicSection cols={9} rowHeight="2rem" elements={[
-    {type:"image", src:"/loc/chicago/garfieldPark/tree1.png", position:{col:1, row:1}, size:{width:9, height:10}},
+    {type:"image", src:"/loc/chicago/garfieldPark/tree1.png", alt:"A comic illustration of a browning double coconut palm tree. The tree is coughing.", position:{col:1, row:1}, size:{width:9, height:10}},
     {type:"text", src:"In 2011, conservatory staff noticed that the leaves were starting to brown. They contacted as many experts as they could, but nothing they did could save the famed plant.",position:{col:1, row:10}, size:{width:9, height:1}, style:{outline:"box", backgroundColor: "white"}},
-    {type:"image", src:"/loc/chicago/garfieldPark/tree2.png", position:{col:1, row:11}, size:{width:9, height:10}},
+    {type:"image", src:"/loc/chicago/garfieldPark/tree2.png", alt:"A comic illustration of another grave but this tombstone reads RIP SEED #2. There are figures mourning around the grave.", position:{col:1, row:11}, size:{width:9, height:10}},
     {type:"text", src:"However, the hope for a double coconut palm hadn't died. Though it is extremely difficult to acquire a seed, because of the conservatory's reputation, a fresh seed was sent over soon after the death of the last tree.", position:{col:1, row:21}, size:{width:9, height:2}, style:{outline:"box", backgroundColor: "white"}},
-    {type:"image", src:"/loc/chicago/garfieldPark/tree3.png", position:{col:1, row:21}, size:{width:9, height:10}},
+    {type:"image", src:"/loc/chicago/garfieldPark/tree3.png", alt:"A comic illustration of a small double coconut palm seedling. The seedling is smiling.", position:{col:1, row:21}, size:{width:9, height:10}},
     {type:"text", src:"With the highest amount of care, it started to grow. The baby plant was protected with multiple cages around it, but less than three years after its arrival, it also started to wilt.", position:{col:1, row:31}, size:{width:9, height:2}, style:{outline:"box", backgroundColor: "white"}},
-    {type:"image", src:"/loc/chicago/garfieldPark/tree4.png", position:{col:1, row:31}, size:{width:9, height:10}},
+    {type:"image", src:"/loc/chicago/garfieldPark/tree4.png", alt:"A comic illustration of the double coconut palm seedling in a cage.", position:{col:1, row:31}, size:{width:9, height:10}},
     {type:"text", src:"In February 2015, this third palm also died. Its caretakers suspected the extremely overcast winter was to blame and beamed it with artificial lighting, but when it was dug out, they found that its roots had caught an infection.", position:{col:1, row:42}, size:{width:9, height:2}, style:{outline:"box", backgroundColor: "white"}},
-    {type:"image", src:"/loc/chicago/garfieldPark/tree5.png", position:{col:1, row:41}, size:{width:9, height:10}},
+    {type:"image", src:"/loc/chicago/garfieldPark/tree5.png",  alt:"A comic illustration of the conservatory under an overcast sky.", position:{col:1, row:41}, size:{width:9, height:10}},
     {type:"text", src:"Maybe double coconut palms just weren't meant to grow in Chicago, but all the other plants in the humid palm room still create an oasis to visit amid the city.", position:{col:1, row:55}, size:{width:9, height:2}, style:{outline:"box", backgroundColor: "white"}},
-    {type:"image", src:"/loc/chicago/garfieldPark/tree6.png", position:{col:1, row:51}, size:{width:9, height:7}},
+    {type:"image", src:"/loc/chicago/garfieldPark/tree6.png", alt:"A comic illustration of a third grave with a tombstone that reads RIP #3.", position:{col:1, row:51}, size:{width:9, height:7}},
 ]}/>
 
-The Garfield Park Conservatory, like the park it resides within, has adapted to serve its neighborhood and grown to what it needs of a city green space. In addition to being a space for plants and plant lovers, the Conservatory hosts plant shows and art exhibits and offers many events for the community. 
+Throughout its life, the Garfield Park Conservatory has adapted to serve the surrounding community's interests and into a busy city green space. In addition to being a space for plants and plant lovers, the Conservatory hosts plant shows and art exhibitions and offers many community events. 
 
 <LOCItem type="pnp" image="/loc/chicago/garfieldPark/mum.jpg" linkOut="https://www.loc.gov/item/98518256/"/>
 
