--- a/src/app/content/chicago/palmerSquare.mdx
+++ b/src/app/content/chicago/palmerSquare.mdx
@@ -17,32 +17,34 @@ stickers: [{image: "/loc/chicago/palmerSquare/bikeSticker.jpg", linkOut: "https:
 
 Bikes have a long and deep history in Chicago, including in Palmer Square Park, where people used to gather for races around the track.
 
-The dream of building a bike had been around for centuries before the initial prototype in the 1817s, called a velocipede, which had no pedals and required its rider to walk along the ground to get momentum. However, it did roll along two wheels, and with enough speed, people could balance and coast.
+The initial prototype for the modern-day bicycle was built in 1817 and was called a velocipede. It had no pedals and required riders to run alongside it to gain enough momentum to ride it. If riders gathered enough speed, they could balance and coast.
 
-The first commercially successful design did have pedals, and it was also known as the Velocipede, but because of its frame and wheels that were banded with metal, it earned the name “Boneshaker”.
+The first commercially successful design, however, did have pedals. It was also known as a velocipede, but because of its frame and wheels were banded with metal, it earned the name “Boneshaker”.
 
-<LOCItem type="book" image="/loc/chicago/palmerSquare/velocipede.jpg" linkOut="https://www.loc.gov/resource/rbpe.34101800/?sp=1"/>
 
-Then came the penny-farthing, improved over the velocipede because its large front wheel allowed for higher speeds. It was called a penny-farthing because the large and small wheels resembled a penny and the smaller UK farthing coin.
+<LOCItem type="book" image="/loc/chicago/palmerSquare/velocipede.jpg" caption="An advertisement for the first gymnacyclidium for riding velocipedes" linkOut="https://www.loc.gov/resource/rbpe.34101800/?sp=1" alt="A black and white advertiesement featuring a man and a woman riding early bicycles."/>
+
+Then came the penny-farthing, which was an improvement over the velocipede because its large front wheel allowed for higher speeds. It was called a penny-farthing because the large and small wheels resembled a penny and the smaller UK farthing coin.
 
 <ComicSection cols={9} rowHeight="2rem" elements={[
     {type:"text", src:"And you said this is...safer than the velocipede??", position:{col:1, row:1}, size:{width:4, height:2}, style:{outline:"bubble"}},
     {type:"text", src:"Oh, no. Much more dangerous.", position:{col:5, row:3}, size:{width:4, height:2}, style:{outline:"bubble"}},
-    {type:"image", src:"/loc/chicago/palmerSquare/bike1.png", position:{col:1, row:1}, size:{width:8, height:13}},
+    {type:"image", src:"/loc/chicago/palmerSquare/bike1.png", alt:"A brightly colored comic of two men in suits admiring a large penny-farthing bicycle.", position:{col:1, row:1}, size:{width:8, height:13}},
     {type:"text", src:"You can get so much faster on this.", position:{col:3, row:13}, size:{width:4, height:2}, style:{outline:"bubble"}},
-    {type:"image", src:"/loc/chicago/palmerSquare/bike2.png", position:{col:5, row:14}, size:{width:4, height:7}},
+    {type:"image", src:"/loc/chicago/palmerSquare/bike2.png", alt:"A brightly colored comic of one of the men admirning the penny-farthing looking nervous.", position:{col:5, row:14}, size:{width:4, height:7}},
     {type:"text", src:"And if you hit something, you’re already high up so there’s so much farther to fall.", position:{col:5, row:19}, size:{width:5, height:2}, style:{outline:"bubble"}},
 ]}/>
 
 It’s no wonder that the next iteration of the bicycle, most similar to the bikes we see on the road today, was known as the “safety” bicycle. This bike eventually also gained pneumatic tires, the diamond frame, and chain drive, which, in addition to creating a safer bike, also created a more comfortable, speedy ride.
 
-In Chicago, there were scores of small bike companies, all manufacturing in the city. Being centrally located in the country and the system set up by Sears meant it was easy to ship these custom bikes across the United States. Bike clubs were popular -- when you invested into a bike (which were costly at the time), you also joined a club to cycle with (and consequentially, invited to all sorts of social events, with costume rides, teas, polo teams...).
+In Chicago, there were scores of small bike companies, all manufacturing in the city. Since these companies were centrally located in the country and could take advantage of the distribution system set up by Sears, they could easily ship custom bikes across the United States. Bike clubs became super popular -- when you invested in a bike (which was a costly purchase at the time), you also joined a club to cycle with (you were also consequentially, invited to all sorts of social events, with costume rides, teas, polo matches...).
 
-<LOCItem type="newspaper" caption="Newspaper clipping from the Chicago eagle, highlight a bicycle club in 1897" image="/loc/chicago/palmerSquare/bikeClub.jpg" linkOut="https://www.loc.gov/resource/sn84025828/1897-07-17/ed-1/?sp=2&q=palmer+bicycle&r=0.136,0.558,0.658,0.457,0"/>
+<LOCItem type="newspaper" caption="Newspaper clipping from the Chicago eagle, highlight a bicycle club in 1897" image="/loc/chicago/palmerSquare/bikeClub.jpg" linkOut="https://www.loc.gov/resource/sn84025828/1897-07-17/ed-1/?sp=2&q=palmer+bicycle&r=0.136,0.558,0.658,0.457,0" alt="A scan of a black and white newspaper with a photo of a group of men posing around a bicycle."/>
 
-Though Chicago made over two thirds of all bikes in the US at this time, it wasn’t an easy adoption in the city. People were concerned with the condition of the roads -- the wear of these fast-moving tires would tear them up and degrade them quickly. Pedestrians were also annoyed -- especially here in Palmer Square Park when the Chicago cycling clubs would hold races around the outer path. Called “scorchers”, it was a nationwide problem, and people were duking it out in the court system and debating whether it was moral to bike on Sundays.
+Although two-thirds of the bikes in the US were manufactured in Chicago at this time, the city wasn’t immediately welcoming to riders. There were concerns over bicycles damaging the city’s roadways -- the wear of these fast-moving tires would tear them up and degrade them quickly. Pedestrians were also annoyed by the presence of cyclists -- especially here in Palmer Square Park where the Chicago cycling clubs would hold races around the outer path. Called “scorchers”, bicycles were becoming a nationwide problem, and people were duking it out in the court systems and also debating whether it was moral to bike on Sundays.
 
-<LOCItem type="pnp" caption="Stereograph of the Bicycle Club, World's Fair Dedication Parade" image="/loc/chicago/palmerSquare/c.jpg" linkOut="https://www.loc.gov/resource/stereo.1s46517/"/>
+
+<LOCItem type="pnp" caption="Stereograph of the Bicycle Club, World's Fair Dedication Parade" image="/loc/chicago/palmerSquare/c.jpg" linkOut="https://www.loc.gov/resource/stereo.1s46517/" alt="Stereograph of a group of cyclists riding in formation along a parade route."/>
 
 {/* 
 Sticker template: 
