--- a/src/app/content/chicago/graceland.mdx
+++ b/src/app/content/chicago/graceland.mdx
@@ -16,24 +16,24 @@ stickers: [{image: "/loc/chicago/graceland/west.png", title: "West Face of Ryers
 ---
 
 Sitting along side the northern branch of the Red Line is the Graceland Cemetery -- covering 119 acres, you’ll find the final resting places of many old Chicago names like Kate Warne, the first female detective, and William Wallace Kimball, the founder of Kimball Pianos.
-
 Graceland is also a center for architecture -- both in the people buried there, but also in the structures that were built there. Some of the United States’ most architecturally significant monuments lay in Graceland. Walk around to see them, and read about three of them here:
 
+
 <ComicSection cols={9} rowHeight="2rem" elements={[
-    {type:"image", src:"/loc/chicago/graceland/map.png", position:{col:1, row:1}, size:{width:9, height:15}},
+    {type:"image", src:"/loc/chicago/graceland/map.png", alt:" Colorfully illustrated map of Graceland Cemetery.", position:{col:1, row:1}, size:{width:9, height:15}},
 ]}/>
 
 
-<LOCItem type="pnp" image="/loc/chicago/graceland/ryerson.jpg" linkOut="https://www.loc.gov/resource/hhh.il0942.sheet/?sp=2"/>
+<LOCItem type="pnp" image="/loc/chicago/graceland/ryerson.jpg" caption="Survey drawing of the Ryerson Tomb" linkOut="https://www.loc.gov/resource/hhh.il0942.sheet/?sp=2" alt="A black and white survey drawing of the Ryerson Tomb."/>
 # 1. The Ryerson Tomb
 The first stop houses Martin L. Ryerson, a lumber businessman. When he died, his son, Martin A. Ryerson, hired Louis Sullivan to design his father’s tomb.
 <ComicSection cols={9} rowHeight="2rem" elements={[
     {type: "text", src:"I don't know why he built his coffin 20 years ago, but I feel like we could do better.", position:{col:4, row:1}, size:{width:5, height:2}, style:{outline:"bubble"}},
-    {type:"image", src:"/loc/chicago/graceland/t1.png", position:{col:1, row:2}, size:{width:9, height:8}},
+    {type:"image", src:"/loc/chicago/graceland/t1.png", alt:"A colored comic panel showing Martin Ryerson and Louis Sullivan looking at his father's wooden casket.", position:{col:1, row:2}, size:{width:9, height:8}},
     {type: "text", src:"Oh totally. We'll make sure it fits you as well.", position:{col:4, row:10}, size:{width:5, height:2}, style:{outline:"bubble"}},
-    {type:"image", src:"/loc/chicago/graceland/t2.png", position:{col:1, row:10}, size:{width:3, height:8}},
+    {type:"image", src:"/loc/chicago/graceland/t2.png", alt:"A comic panel close-up of Louis Sullivan mid-sentence.", position:{col:1, row:10}, size:{width:3, height:8}},
     {type: "text", src:"Fits me?", position:{col:4, row:14}, size:{width:5, height:2}, style:{outline:"bubble"}},
-    {type:"image", src:"/loc/chicago/graceland/t3.png", position:{col:5, row:14}, size:{width:5, height:8}},
+    {type:"image", src:"/loc/chicago/graceland/t3.png", alt:"A colorful comic panel showing Louis Sullivan and Martin Ryerson in conversation.", position:{col:5, row:14}, size:{width:5, height:8}},
     {type: "text", src:"well....eventually.", position:{col:4, row:17}, size:{width:5, height:2}, style:{outline:"bubble"}},
 ]}/>
 
@@ -41,33 +41,33 @@ Louis Sullivan, known as the “father of skyscrapers” and part of the “trin
 
 This tomb is one of few examples of Egyptian Revival style still in the US, and is notable in its lack of Egyptian motifs on its exterior -- with a floral design attached to its gate.
 
-<LOCItem type="pnp" image="/loc/chicago/graceland/honore.jpg" linkOut="https://www.loc.gov/resource/hhh.il0941.sheet/?sp=2"/>
+<LOCItem type="pnp" image="/loc/chicago/graceland/honore.jpg" caption="A survey drawing of Honore Tomb" linkOut="https://www.loc.gov/resource/hhh.il0941.sheet/?sp=2" alt="A black and white survey drawing of the Honore tomb."/>
 # 2. The Honore Tomb
 This second tomb, just north of the Ryerson Tomb, holds Henry Hamilton Honore, known for founding the Chicago Park District.
 
-It was designed by one of the largest architecture firms in the United States of the time, McKim, Mead & White, who also created the Metropolitan Museum of Art in New York City, the Boston Public Library building, and the English Building at the University of Illinois Urbana-Champaign campus.
+It was designed by one of the largest architecture firms in the United States at the time, McKim, Mead & White, who also designed the Metropolitan Museum of Art in New York City, the Boston Public Library building, and the English Building at the University of Illinois Urbana-Champaign campus.
 
-<LOCItem type="newspaper" image="/loc/chicago/graceland/hhHonore.jpg" linkOut="https://www.loc.gov/resource/sn86058226/1916-08-17/ed-1/?sp=8&q=honore&r=0.026,1.061,0.396,0.275,0"/>
+<LOCItem type="newspaper" image="/loc/chicago/graceland/hhHonore.jpg" caption="Newspaper article announcing Henry Hamilton Honore's funeral arrangements" linkOut="https://www.loc.gov/resource/sn86058226/1916-08-17/ed-1/?sp=8&q=honore&r=0.026,1.061,0.396,0.275,0" alt="Black and white scan of newspaper article detailing funeral arrangements for Henry Hamilton Honore."/>
 
-This tomb is styled in the French High Gothic Revival tradition, similar to the ornate churches that can be found in France, with extremely ornate stonework. The Smithsonian recognizes it as one of American’s most “significant sculptural works”.
+This tomb is styled in the French High Gothic Revival tradition, similar to the ornate churches that can be found in France, with extremely detailed stonework. The Smithsonian recognizes it as one of America’s most “significant sculptural works”.
 
-Five sarcophagi sit on the pedestal, and both Henry and his wife Eliza rest there. Of their six children, three were entombed with them: Lockwood, Nathanial, and Adrian. 
+Five sarcophagi sit on the pedestal, and both Henry and his wife Eliza rest there. Of their six children, three were entombed with them: Lockwood, Nathaniel, and Adrian.
 
-<LOCItem type="pnp" image="/loc/chicago/graceland/getty.jpg" linkOut="https://www.loc.gov/resource/hhh.il0120.sheet/?sp=1"/>
+<LOCItem type="pnp" image="/loc/chicago/graceland/getty.jpg" caption="Survey drawing of the Getty Tomb" linkOut="https://www.loc.gov/resource/hhh.il0120.sheet/?sp=1" alt="Black and white survey drawing of the Getty Tomb."/>
 # 3. The Getty Tomb
-This tomb is the second of three mausoleums that Louis Sullivan designed in his career: the last is in St. Louis. It was commissioned by Henry Getty for his wife, Eliza, as Getty was business partners with Ryerson and like what Sullivan did for his tomb.
+This tomb is the second of three mausoleums that Louis Sullivan designed in his career: the last is in St. Louis. It was commissioned by Henry Getty for his wife, Eliza. Getty and Ryerson were business partners and Getty admired the work Sullivan did for Ryerson’s tomb.
 
 <ComicSection cols={9} rowHeight="2rem" elements={[
     {type:"text", src:"Frank Lloyd Wright was one of Sullivan's students.", position:{col:1, row:1}, size:{width:4, height:2}, style:{outline:"box", backgroundColor: "white"}},
     {type:"text", src:"The Getty Tomb is purely the work of Sullivan.", position:{col:6, row:3}, size:{width:4, height:2}, style:{outline:"bubble"}},
     {type:"text", src:"It is a piece of sculpture, a statue, a great poem.", position:{col:5, row:7}, size:{width:4, height:2}, style:{outline:"bubble"}},
-    {type:"image", src:"/loc/chicago/graceland/flw.png", position:{col:1, row:1}, size:{width:9, height:8}},
+    {type:"image", src:"/loc/chicago/graceland/flw.png", alt:"A comic illustration of Frank Lloyd Wright. ", position:{col:1, row:1}, size:{width:9, height:8}},
 ]}/>
-
 
 There are Art Nouveau elements on the pair of gates guarding the tomb. On the exterior, you’ll find the letter G weaved into the metal medallion among the florals, and on the interior, you’ll find the date “1890”. These elements define Sullivan’s style.
 
 Louis Sullivan himself is also buried here in Graceland, though his marker isn’t nearly as ornate as the ones he built for others. See if you can spot it near the Ryerson Tomb.
+
 
 
 {/* 
